--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react-router-dom": "^5.1.8",
     "react": "^17.0.2",
+    "react-carousel-minimal": "^1.3.4",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
